src/objects/BrokerSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Powertrain control module</description>
    <fields>
        <fullName>BrokerClassName__c</fullName>
        <description>Fully qualified name of Broker subclass.</description>
        <label>Broker Class Name</label>
        <length>97</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inhibit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make this TRUE to prevent thermal runaway and nuclear meltdown on the Broker.</description>
        <label>Inhibit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPaused__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this setting prevents new Messages from being processed. They will still enter the queue, but unresolved in a &apos;Queued&apos; status.</description>
        <label>IsPaused</label>
        <type>Checkbox</type>
    </fields>
    <label>Broker Settings</label>
</CustomObject>